
0.4.0:

    * FIX: netcast_config_enable_all option updated that now the output config.xml contains only items which have their NetCast icons
    * FIX: netcast_config_enable_all option can be used now multiple times
    * FIX: ywe libs fixing on 0-sized files now works properly
    * FIX: using NTFS for ywedata should make ywe work more stable, reliable and a bit better performance than using ywedata EXT3 fs image on FAT fs
    * ADD: static list of kernel modules loading support from /lib/modules, /home/modules, /mnt/user/modules
    * ADD: kernel modules included in /lib/modules: cifs.ko, evdev.ko, fuse.ko, hid.ko, input-core.ko, usbhid.ko
    * ADD: keyboard (only partial yet) and mouse support in built-in web browser - WebUI switchable option, not enabled by default
    * ADD: install.sh script makes now firmware backup if the OpenLGTV BCM installation is run for the first time
    * ADD: editable 25 bookmarks feature to Internet Browser WebUI option (work by nicola_12345)
    * ADD: support for reset OpenLGTV_BCM settings back to default - if OpenLGTV_BCM/reset_config file exists on USB storage device then move /mnt/user/* to OpenLGTV_BCM/config_backup/ and reboot (idea from LGMOD by lprot)
    * ADD: boot scripts execution time measurement
    * ADD: NTFS partitions are now remounted with read/write support at boot
    * ADD: support for OpenLGTV_BCM on NTFS formated USB storage devices
    * ADD: ipla.tv alternative player - Polish VOD service
    * UPDATE: haserl updated to 0.9.29
    * CHANGE: sstripped binaries for reduce image size (only busybox and uClibc libs left, yet)
    * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
    * CHANGE: MTD partitions mounting has been separated from rcS to rc.mount script
    * REMOVE: removed strace and ltrace binaries
    * REMOVE: libz.so.1.2.3 - libz.so* libs are now linked to /usr/local/lib/libz.so*